# CoxeterViewer5D

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CITATION.cff  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.researchcontainer/: Dockerfile  README.md  devcontainer.json
.serena/: project.yml
docs/: data-format.md  demo-media-manifest.json  demo-media.md  desktop-ux.md  exact-vs-drawing.md  glossary.md  math.md  references.md  tooling.md  viewer-design.md  walkthroughs.md
e2e/: app.spec.ts  demo-media.spec.ts
scripts/: README.md  adapter_contract_validate.mjs  benchmark_catalogue.mjs  benchmark_machine.mjs  benchmark_timed.mjs  certify_compact_5_cube.py  certify_compact_5_prism.py  certify_compact_5_prism_family.py  certify_davis_incidence.mjs  certify_geometry_intervals.py  certify_local_links.mjs  certify_morse.mjs  certify_quotient.mjs  certify_quotient_torsion_free.mjs  certify_tumarkin_8facet.py  check_independent.mjs  compare_all_backends.mjs  compare_backends.mjs  compare_quotient_backends.mjs  coxiter_check_compact.py  demo_record.mjs  exact_export_contract.json  external_tool_adapters.json  gap_kbmag_export_backend.g  gap_kbmag_export_backend.py  gap_quotient_export.g  gap_quotient_export.py  regenerate_all.mjs  (+19 more)
src-tauri/: Cargo.toml  README.md  desktop-contract.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+161 files in other folders)
