[package]
name = "coxeter-viewer-5d"
version = "0.1.0"
description = "Desktop shell for CoxeterViewer5D"
authors = ["CoxeterViewer5D contributors"]
edition = "2021"

[lib]
name = "coxeter_viewer_5d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
